--- a/sfos-patch-keyboard-phone-space-key/CONFIG
+++ b/sfos-patch-keyboard-phone-space-key/CONFIG
@@ -5,16 +5,21 @@
 # Fields:
 # - one line: Prefix, DisplayName, PackageName, Category,
 #             Maintainer, Summary, DiscussionLink, DonationsLink,
-#             SourcesLink, Version
-# - multiple lines: Description, Screenshots, CompatibleVersions,
-#             Changelog, Requires, Keywords
+#             SourcesLink, Version, Release, License
+# - multiple lines: Keywords, Description, Screenshots,
+#             CompatibleVersions, Changelog, Requires,
+#             Obsoletes, Conflicts, TestCommands
 #   (each line in a multiline field must start with '- ')
+#
+# Required:
+# DisplayName, PackageName, Category, Maintainer, Summary, Version,
+# Release, License, Description, CompatibleVersions
 #
 
 SourcePackages:
 - jolla-keyboard >= 0.7.1
 
-Prefix: /usr/share
+Prefix: /usr/share/maliit/plugins/com/jolla
 DisplayName: Add space key to phone number keyboard
 PackageName: sfos-patch-keyboard-phone-space-key
 Category: Keyboard
@@ -28,40 +33,49 @@ Summary: Adds a space key to the phone number keyboard.
 Description:
 - Adds a space key to the phone number keyboard.
 
-DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-add-space-key-phone-number-keyboard
-# DonationsLink: https://example.org/donations
+DiscussionLink: https://forum.sailfishos.org/t/patches-by-ichthyosaurus
+DonationsLink: https://liberapay.com/ichthyosaurus
 SourcesLink: https://github.com/ichthyosaurus/sailfish-public-patch-sources
 
-Version: 1.0.2
+Version: 1.0.3
 Release: 1
+License: GPL-3.0-or-later
 
 Requires:
 - sailfish-version >= 3.0.0
-- jolla-keyboard >= 0.7.1
+- @sources
 
 Screenshots:
 - screenshot-1.png
 
 CompatibleVersions:
-- 3.0.0.5
-- 3.0.0.8
-- 3.0.0.11
-- 3.0.1.11
-- 3.0.1.14
-- 3.0.2.8
-- 3.0.3.8
-- 3.0.3.9
-- 3.0.3.10
-- 3.1.0.11
-- 3.2.0.12
-- 3.2.1.20
-- 3.3.0.14
-- 3.3.0.16
 - 3.4.0.22
 - 3.4.0.24
+- 4.0.1.45
+- 4.0.1.48
+- 4.1.0.23
+- 4.1.0.24
+- 4.2.0.19
+- 4.2.0.21
+- 4.3.0.12
+- 4.3.0.15
+- 4.4.0.58
+- 4.4.0.64
+- 4.4.0.68
+- 4.4.0.72
+- 4.5.0.16
+- 4.5.0.18
+- 4.5.0.19
+
 
 
 Changelog:
+- 1.0.3:
+- - update compatibility info: the patch is compatible with all versions of SailfishOS up to 4.5.0.19
+- - you may have to install an earlier version of this patch on older system versions
+- - add donations link and feedback forum
+- - apply patch to portrait and landscape layouts
+-
 - 1.0.2:
 - - update compatibility info: the patch is compatible with all versions of SailfishOS up to 3.4.0.24
 -
