--- a/sfos-patch-keyboard-swiss-french-layout/CONFIG
+++ b/sfos-patch-keyboard-swiss-french-layout/CONFIG
@@ -5,11 +5,15 @@
 # Fields:
 # - one line: Prefix, DisplayName, PackageName, Category,
 #             Maintainer, Summary, DiscussionLink, DonationsLink,
-#             SourcesLink, Version
+#             SourcesLink, Version, Release, License
 # - multiple lines: Keywords, Description, Screenshots,
 #             CompatibleVersions, Changelog, Requires,
-#             Obsoletes, Conflicts
+#             Obsoletes, Conflicts, TestCommands
 #   (each line in a multiline field must start with '- ')
+#
+# Required:
+# DisplayName, PackageName, Category, Maintainer, Summary, Version,
+# Release, License, Description, CompatibleVersions
 #
 
 # SourcePackages: none required
@@ -18,6 +22,7 @@ Prefix: /usr/share/maliit/plugins/com/jolla/layouts
 DisplayName: Swiss French keyboard layout
 PackageName: sfos-patch-keyboard-swiss-french-layout
 Category: Keyboard
+
 Keywords:
 - Patch
 - Keyboard
@@ -26,31 +31,28 @@ Keywords:
 - Swiss French
 
 Maintainer: ichthyosaurus
-Summary: Patch adding a new Swiss French keyboard layout.
+Summary: Patch adding a new Swiss French keyboard layout
 Description:
 - This patch adds a new Swiss French keyboard layout.
 -
-- Credits:
-- Many thanks to [Jordi](https://openrepos.net/users/jordi) for writing this patch!
-- I am only the packager.
+- It is recommended to also install the [apostrophe key patch](https://openrepos.net/content/ichthyosaurus/patch-apostrophe-key-all-stock-keyboards)
+- which adds a separate apostrophe key next to the comma key. It also gives quick
+- access to French typographical quotation marks.
+-
+- Credits: the patch was originally written by [Jordi](https://openrepos.net/users/jordi)
+- and gets occasionally updates from [ichthyosaurus](https://openrepos.net/users/ichthyosaurus).
 
-DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-swiss-french-keyboard-layout
-# DonationsLink: https://example.org/donations
+DiscussionLink: https://forum.sailfishos.org/t/patches-by-ichthyosaurus
+DonationsLink: https://liberapay.com/ichthyosaurus
 SourcesLink: https://github.com/ichthyosaurus/sailfish-public-patch-sources
 
-Version: 1.0.2
+Version: 1.1.0
 Release: 1
+License: GPL-3.0-or-later
 
 Requires:
-- sailfish-version >= 3.0.0
+- sailfish-version >= 3.4.0
 - jolla-keyboard >= 0.7.1
-
-# Conflicts:
-# - my-conflicting-package = 0.0.1
-# - the-old-name
-#
-# Obsoletes:
-# - the-other-old-name
 
 Screenshots:
 - screenshot-1.png
@@ -59,40 +61,31 @@ Screenshots:
 - screenshot-4.png
 
 CompatibleVersions:
-- 2.1.0.11
-- 2.1.1.12
-- 2.1.1.23
-- 2.1.1.24
-- 2.1.1.26
-- 2.1.2.3
-- 2.1.3.3
-- 2.1.3.5
-- 2.1.3.7
-- 2.1.4.13
-- 2.1.4.14
-- 2.1.4.15
-- 2.2.0.29
-- 2.2.1.18
-- 2.2.1.19
-- 3.0.0.5
-- 3.0.0.8
-- 3.0.0.11
-- 3.0.1.11
-- 3.0.1.14
-- 3.0.2.8
-- 3.0.3.8
-- 3.0.3.9
-- 3.0.3.10
-- 3.1.0.11
-- 3.2.0.12
-- 3.2.1.20
-- 3.3.0.14
-- 3.3.0.16
 - 3.4.0.22
 - 3.4.0.24
-
+- 4.0.1.45
+- 4.0.1.48
+- 4.1.0.23
+- 4.1.0.24
+- 4.2.0.19
+- 4.2.0.21
+- 4.3.0.12
+- 4.3.0.15
+- 4.4.0.58
+- 4.4.0.64
+- 4.4.0.68
+- 4.4.0.72
+- 4.5.0.16
+- 4.5.0.18
+- 4.5.0.19
 
 Changelog:
+- 1.1.0:
+- - update compatibility info: the patch is compatible with all versions of SailfishOS up to 4.5.0.19
+- - you may have to install an earlier version of this patch on older system versions
+- - fix the space bar row on newer SFOS versions
+- - NOTE: due to compatibility issues, the apostrophe key is no longer part of this patch. Install the separate apostrophe patch to get it back.
+-
 - 1.0.2:
 - - update compatibility info: the patch is compatible with all versions of SailfishOS up to 3.4.0.24
 -
