--- a/sfos-patch-rm-lockscreen-weather/CONFIG
+++ b/sfos-patch-rm-lockscreen-weather/CONFIG
@@ -5,19 +5,25 @@
 # Fields:
 # - one line: Prefix, DisplayName, PackageName, Category,
 #             Maintainer, Summary, DiscussionLink, DonationsLink,
-#             SourcesLink, Version
-# - multiple lines: Description, Screenshots, CompatibleVersions,
-#             Changelog, Requires, Keywords
+#             SourcesLink, Version, Release, License
+# - multiple lines: Keywords, Description, Screenshots,
+#             CompatibleVersions, Changelog, Requires,
+#             Obsoletes, Conflicts
 #   (each line in a multiline field must start with '- ')
+#
+# Required:
+# DisplayName, PackageName, Category, Maintainer, Summary, Version,
+# Release, License, Description, CompatibleVersions
 #
 
 SourcePackages:
-- lipstick-jolla-home-qt5
+- lipstick-jolla-home-qt5 >= 1.25.13.6
 
-Prefix: /usr/share
+Prefix: /usr/share/lipstick-jolla-home-qt5/lockscreen
 DisplayName: Remove lockscreen weather info
 PackageName: sfos-patch-rm-lockscreen-weather
 Category: Homescreen
+
 Keywords:
 - Patch
 - lockscreen
@@ -30,36 +36,39 @@ Summary: Patch removing the weather info item from the lockscreen.
 Description:
 - Patch removing the weather info item from the lockscreen.
 
-DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-remove-lockscreen-weather-info
-# DonationsLink: https://example.org/donations
+DiscussionLink: https://forum.sailfishos.org/t/patches-by-ichthyosaurus
+DonationsLink: https://liberapay.com/ichthyosaurus
 SourcesLink: https://github.com/ichthyosaurus/sailfish-public-patch-sources
 
-Version: 1.0.2
+Version: 1.1.0
 Release: 1
+License: GPL-3.0-or-later
 
+# Add a list of commands below which can be run after deployment.
+TestCommands:
+- systemctl --user restart lipstick
+
+# Use @sources to mark all entries of SourcePackages as required.
 Requires:
-- sailfish-version >= 3.0.0
-- lipstick-jolla-home-qt5
+- sailfish-version >= 4.5.0
+- @sources
 
 Screenshots:
 - screenshot-1.png
 - screenshot-2.png
 
 CompatibleVersions:
-- 3.0.2.8
-- 3.0.3.8
-- 3.0.3.9
-- 3.0.3.10
-- 3.1.0.11
-- 3.2.0.12
-- 3.2.1.20
-- 3.3.0.14
-- 3.3.0.16
-- 3.4.0.22
-- 3.4.0.24
+- 4.5.0.16
+- 4.5.0.18
+- 4.5.0.19
 
 
 Changelog:
+- 1.1.0:
+- - update compatibility info: the patch is compatible with all versions of SailfishOS 4.5
+- - you may have to install an earlier version of this patch on older system versions
+- - add donations link
+-
 - 1.0.2:
 - - update compatibility info: the patch is compatible with all versions of SailfishOS up to 3.4.0.24
 -
