--- a/sfos-patch-keyboard-xt9-intelligence/CONFIG
+++ b/sfos-patch-keyboard-xt9-intelligence/CONFIG
@@ -5,17 +5,22 @@
 # Fields:
 # - one line: Prefix, DisplayName, PackageName, Category,
 #             Maintainer, Summary, DiscussionLink, DonationsLink,
-#             SourcesLink, Version
-# - multiple lines: Description, Screenshots, CompatibleVersions,
-#             Changelog, Requires, Keywords
+#             SourcesLink, Version, Release, License
+# - multiple lines: Keywords, Description, Screenshots,
+#             CompatibleVersions, Changelog, Requires,
+#             Obsoletes, Conflicts, TestCommands
 #   (each line in a multiline field must start with '- ')
+#
+# Required:
+# DisplayName, PackageName, Category, Maintainer, Summary, Version,
+# Release, License, Description, CompatibleVersions
 #
 
 SourcePackages:
 - jolla-keyboard >= 0.7.1
-- jolla-xt9
+- jolla-xt9 >= 0.5.9
 
-Prefix: /usr/share
+Prefix: /usr/share/maliit/plugins/com/jolla
 DisplayName: Improved XT9 punctuation handling
 PackageName: sfos-patch-keyboard-xt9-intelligence
 Category: Keyboard
@@ -37,49 +42,62 @@ Keywords:
 - text prediction
 - predictive
 
-DiscussionLink: https://openrepos.net/content/ichthyosaurus/patch-xt9-improved-punctuation-handling
-# DonationsLink: https://example.org/donations
+DiscussionLink: https://forum.sailfishos.org/t/patches-by-ichthyosaurus
+DonationsLink: https://liberapay.com/ichthyosaurus
 SourcesLink: https://github.com/ichthyosaurus/sailfish-public-patch-sources
 
-Version: 1.0.2
-Release: 1
+Version: 1.1.0
+Release: 2
+License: GPL-3.0-or-later
 
 Requires:
 - sailfish-version >= 3.0.0
-- jolla-keyboard >= 0.7.1
-- jolla-xt9 >= 0.5.9
+- @sources
 
 Obsoletes:
-- sfos-patch-keyboard-patch-xt9-intelligence
+- sfos-patch-keyboard-patch-xt9-intelligence < 1.1.0
 
 # Screenshots:
 # -
 
 CompatibleVersions:
-- 3.0.0.5
-- 3.0.0.8
-- 3.0.0.11
-- 3.0.1.11
-- 3.0.1.14
-- 3.0.2.8
-- 3.0.3.8
-- 3.0.3.9
-- 3.0.3.10
-- 3.1.0.11
-- 3.2.0.12
-- 3.2.1.20
-- 3.3.0.14
-- 3.3.0.16
 - 3.4.0.22
 - 3.4.0.24
-
+- 4.0.1.45
+- 4.0.1.48
+- 4.1.0.23
+- 4.1.0.24
+- 4.2.0.19
+- 4.2.0.21
+- 4.3.0.12
+- 4.3.0.15
+- 4.4.0.58
+- 4.4.0.64
+- 4.4.0.68
+- 4.4.0.72
+- 4.5.0.16
+- 4.5.0.18
+- 4.5.0.19
 
 Changelog:
-- 1.0.2:
+- 1.1.0-2 (2023-04-17):
+- - update compatibility info: the patch is compatible with all versions of SailfishOS up to 4.5.0.19
+- - you may have to install an earlier version of this patch on older system versions
+- - revert the name change right away
+-
+- 1.1.0-1 (2023-04-17):
+- - rename rpm package
+-
+- 1.0.2 (2020-12-06):
 - - update compatibility info: the patch is compatible with all versions of SailfishOS up to 3.4.0.24
 -
-- Fr Dec 27: update compatibility info: the patch is compatible with all versions of SailfishOS 3
-- So Jun 30: fix package name to be the same in all locations
-- Sa Jun 29: initial public release
+- 1.0.1 (2019-12-27):
+- - update compatibility info: the patch is compatible with all versions of SailfishOS 3
+-
+- 1.0.0-2 (2019-06-30):
+- - fix package name to be the same in all locations
+-
+- 1.0.0-1 (2019-06-26):
+- - initial public release
 
 # kate: syntax SailfishOS Patch
